Fix regex HTML test to properly contain the regex
git-svn-id: http://svn.textmate.org/trunk/Bundles/RegularExpressions.tmbundle@740 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/RegExp Test HTML.plist
+++ b/Commands/RegExp Test HTML.plist
@@ -13,7 +13,7 @@
 echo "&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body&gt;"
 echo "&lt;h3&gt;Results for /`pbpaste`/&lt;/h3&gt;&lt;tt&gt;"
 
-"$TM_BUNDLE_PATH/Tools/hl.pl" -c "Red","Dark Blue","Dark Purple","Brown","Burgundy","Forest Green","Yellow","Pastel Green","Light Purple","Pink","Turquoise","Light Blue","Dark Grey","Orange","Grass Green" `pbpaste`
+"$TM_BUNDLE_PATH/Tools/hl.pl" -c "Red","Dark Blue","Dark Purple","Brown","Burgundy","Forest Green","Yellow","Pastel Green","Light Purple","Pink","Turquoise","Light Blue","Dark Grey","Orange","Grass Green" "`pbpaste`"
 
 echo "&lt;/tt&gt;&lt;/body&gt;&lt;/html&gt;"</string>
 	<key>input</key>
