More languages updated...
git-svn-id: http://svn.textmate.org/trunk/Bundles/RegularExpressions.tmbundle@1181 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/RegExp.plist
+++ b/Syntaxes/RegExp.plist
@@ -68,7 +68,7 @@
             name = "keyword.function.method.quantifier.regexp";
             match = "((?<!\\()[?*+][?+]?)|\\{\\d*,\\d*\\}";
         },
-        {   name = "string.single-quoted.regexp";
+        {   name = "string.quoted.single.regexp";
             comment = "double backslash";
             match = "\\\\\\\\"; 
 
