• change these to HTML output
git-svn-id: http://svn.textmate.org/trunk/Bundles/RegularExpressions.tmbundle@3493 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/RegExp Test Tooltip.plist
+++ b/Commands/RegExp Test Tooltip.plist
@@ -13,7 +13,7 @@
 # /old/new/ 
 # Every line after the first is match fodder, used to test the regexp.
 
-ruby "$TM_BUNDLE_PATH/Tools/rx_helper.rb"</string>
+ruby "$TM_BUNDLE_PATH/Tools/rx_helper.rb"|pre</string>
 	<key>input</key>
 	<string>selection</string>
 	<key>keyEquivalent</key>
@@ -21,7 +21,7 @@ ruby "$TM_BUNDLE_PATH/Tools/rx_helper.rb"</string>
 	<key>name</key>
 	<string>RegExp Test Tooltip</string>
 	<key>output</key>
-	<string>separateWindow</string>
+	<string>showAsHTML</string>
 	<key>uuid</key>
 	<string>7EB957A4-A531-11D9-917B-000D9332809C</string>
 </dict>
