Initial checkin of S5 bundle. Who needs Powerpoint?
git-svn-id: http://svn.textmate.org/trunk/Bundles/RegularExpressions.tmbundle@3600 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -8,6 +8,7 @@
 	<array>
 		<string>7EB957A4-A531-11D9-917B-000D9332809C</string>
 		<string>8FDBC987-A543-11D9-B374-000D9332809C</string>
+		<string>BAFE4C4F-8D59-48CD-A3BC-52A2084531C9</string>
 	</array>
 	<key>uuid</key>
 	<string>57D5EDA2-A531-11D9-917B-000D9332809C</string>
