Change comment.line.regexp to comment.line.number-sign.regexp
git-svn-id: http://svn.textmate.org/trunk/Bundles/RegularExpressions.tmbundle@4133 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/RegExp.plist
+++ b/Syntaxes/RegExp.plist
@@ -92,7 +92,7 @@
 					<key>match</key>
 					<string>(?&lt;=\()\?#</string>
 					<key>name</key>
-					<string>comment.line.regexp</string>
+					<string>comment.line.number-sign.regexp</string>
 				</dict>
 			</array>
 		</dict>
