Global change from constant.character.escaped to constant.character.escape, we had been split 50/50 so this brings all the languages in line with each other.
git-svn-id: http://svn.textmate.org/trunk/Bundles/RegularExpressions.tmbundle@4196 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/RegExp.plist
+++ b/Syntaxes/RegExp.plist
@@ -129,7 +129,7 @@
 			<key>match</key>
 			<string>\\.</string>
 			<key>name</key>
-			<string>constant.character.escaped.regexp</string>
+			<string>constant.character.escape.regexp</string>
 		</dict>
 	</dict>
 	<key>scopeName</key>
