• Change keyword.function.regexp to constant.character.escape.regexp • Change keyword.function.method.quantifier.regexp to keyword.operator.quantifier.regexp
git-svn-id: http://svn.textmate.org/trunk/Bundles/RegularExpressions.tmbundle@4427 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/RegExp.plist
+++ b/Syntaxes/RegExp.plist
@@ -104,13 +104,13 @@
 			<key>match</key>
 			<string>\\([tvnrbfae]|[0-8]{3}|x\H\H\{7\H{7}\}|x\H\H|c\d+|C-\d+|M-\d+|M-\\C-\d+)</string>
 			<key>name</key>
-			<string>keyword.function.regexp</string>
+			<string>constant.character.escape.regexp</string>
 		</dict>
 		<dict>
 			<key>match</key>
 			<string>((?&lt;!\()[?*+][?+]?)|\{\d*,\d*\}</string>
 			<key>name</key>
-			<string>keyword.function.method.quantifier.regexp</string>
+			<string>keyword.operator.quantifier.regexp</string>
 		</dict>
 	</array>
 	<key>repository</key>
