Assign shortcut to the grammar.
git-svn-id: http://svn.textmate.org/trunk/Bundles/RegularExpressions.tmbundle@4979 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/RegExp.plist
+++ b/Syntaxes/RegExp.plist
@@ -12,6 +12,8 @@
 	<string>(/\*|\{|\()</string>
 	<key>foldingStopMarker</key>
 	<string>(\*/|\}|\))</string>
+	<key>keyEquivalent</key>
+	<string>^~R</string>
 	<key>name</key>
 	<string>Regular Expression</string>
 	<key>patterns</key>
