--- a/Commands/RegExp Test HTML.plist
+++ b/Commands/RegExp Test HTML.plist
@@ -21,7 +21,7 @@ echo "&lt;/tt&gt;&lt;/body&gt;&lt;/html&gt;"</string>
 	<key>keyEquivalent</key>
 	<string>^~@x</string>
 	<key>name</key>
-	<string>RegExp Test HTML</string>
+	<string>Test Clipboard RegExp</string>
 	<key>output</key>
 	<string>showAsHTML</string>
 	<key>uuid</key>
