Change their names one last time, realizing how bad they were.
git-svn-id: http://svn.textmate.org/trunk/Bundles/RegularExpressions.tmbundle@4982 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/RegExp Test HTML.plist
+++ b/Commands/RegExp Test HTML.plist
@@ -21,7 +21,7 @@ echo "&lt;/tt&gt;&lt;/body&gt;&lt;/html&gt;"</string>
 	<key>keyEquivalent</key>
 	<string>^~@x</string>
 	<key>name</key>
-	<string>Test Clipboard RegExp</string>
+	<string>Test RegExp in Clipboard</string>
 	<key>output</key>
 	<string>showAsHTML</string>
 	<key>uuid</key>
