--- a/Commands/RegExp Test Tooltip.plist
+++ b/Commands/RegExp Test Tooltip.plist
@@ -19,7 +19,7 @@ ruby "$TM_BUNDLE_SUPPORT/bin/rx_helper.rb"|pre</string>
 	<key>keyEquivalent</key>
 	<string>^~@x</string>
 	<key>name</key>
-	<string>Test First Line RegExp</string>
+	<string>Test RegExp in First Line</string>
 	<key>output</key>
 	<string>showAsHTML</string>
 	<key>uuid</key>
