--- a/info.plist
+++ b/info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>contactEmailRot13</key>
+	<string>puevf@pwnpx.pbz</string>
+	<key>contactName</key>
+	<string>Chris Thomas</string>
+	<key>description</key>
+	<string>Miscellaneous support for working with &lt;a href="http://www.regular-expressions.info/"&gt;regular expressions&lt;/a&gt;.</string>
 	<key>name</key>
 	<string>Regular Expressions</string>
 	<key>ordering</key>
