--- a/Commands/RegExp Test Tooltip.plist
+++ b/Commands/RegExp Test Tooltip.plist
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>beforeRunningCommand</key>
 	<string>nop</string>
 	<key>command</key>
-	<string># Select a regular expression in your text; this command will show you matches in the rest of your text.
+	<string>#!/usr/bin/env bash
+[[ -f "${TM_SUPPORT_PATH}/lib/bash_init.sh" ]] &amp;&amp; . "${TM_SUPPORT_PATH}/lib/bash_init.sh"
+
+# Select a regular expression in your text; this command will show you matches in the rest of your text.
 # First line of input is expected to be a regular
 # expression. If we're doing matching, leave out the /slashes/, eg:
 # (.+)z
@@ -16,13 +19,23 @@
 ruby "$TM_BUNDLE_SUPPORT/bin/rx_helper.rb"|pre</string>
 	<key>input</key>
 	<string>selection</string>
+	<key>inputFormat</key>
+	<string>text</string>
 	<key>keyEquivalent</key>
 	<string>^~@x</string>
 	<key>name</key>
 	<string>Test RegExp in First Line</string>
-	<key>output</key>
-	<string>showAsHTML</string>
+	<key>outputCaret</key>
+	<string>afterOutput</string>
+	<key>outputFormat</key>
+	<string>html</string>
+	<key>outputLocation</key>
+	<string>newWindow</string>
+	<key>scope</key>
+	<string>source.regexp.oniguruma, text.tm-snippet, string.regexp</string>
 	<key>uuid</key>
 	<string>7EB957A4-A531-11D9-917B-000D9332809C</string>
+	<key>version</key>
+	<integer>2</integer>
 </dict>
 </plist>
